--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,11 +7,12 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/this-site.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/flowstate.css" | prepend: site.baseurl }}">
   
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <script src="https://kit.fontawesome.com/7d851d34bc.js" crossorigin="anonymous"></script>
   <script src="{{ "/js/vendor.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/foundation.js" | prepend: site.baseurl }}"></script>
 </head>
