--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,35 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post grid-x cell" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  <header class="post-header grid-x cell align-middle">
+    <div class="cell shrink">
+      logo here
+      {{ site.data.apps.agenda.icon }}
+    </div>
+    <div class="cell shrink grid-x">
+      <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+      <div class="grid-x cell tag-container">
+        <div class="tag cell shrink">
+          {{ page.flow-type }}
+        </div>
+        {%- for tag in page.tags -%}
+          <div class="tag cell shrink">
+            #{{ tag }}
+          </div>
+        {%- endfor -%}
+      </div>
+    </div>
+    <div class="cell shrink">
+      <p class="post-meta">
+        <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+      </p>
+    </div>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content cell" itemprop="articleBody">
+    <iframe src="{{ page.video-link }}" height="800px" width="100%" scrolling="no" frameborder="0"></iframe>
     {{ content }}
   </div>
 
