Explore Flow Type Section Added ++

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
       {% assign app = site.data.apps[page.application] %}
       <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{page.application}}">
     </div>
-    <div class="cell shrink grid-x">
+    <div class="cell auto grid-x">
       <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
       <div class="grid-x cell tag-container">
         <div class="tag cell shrink flow-type align-middle grid-x">
