--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -6,6 +6,8 @@ $tile-radius-medium: 20px;
 $tile-radius-big: 30px;
 $pill-radius: 500px;
 
+$elevation: 0.3em;
+
 // Colors
 $pure-white: #ffffff;
 $pure-black: #000000;
@@ -14,6 +16,9 @@ $pure-black: #000000;
 $twitter-blue: #1DA1F2;
 $twitter-blue-light: #D2ECFC;
 $twitter-blue-dark: #0E8FD5;
+
+$agenda-brand-color: #FFAA01;
+$apple-news-brand-color: #f84969;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
@@ -60,6 +65,7 @@ $semantic-colors:(
 @import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900i,900&display=swap');
 $lato: 'Lato', sans-serif;
 $lato-thin: 100;
+$lato-light: 300;
 $lato-light-italic: 300i;
 $lato-regular: 400;
 $lato-bold: 700;
