Iframe aspect-ratio

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: default
   </header>
 
   <div class="post-content cell" itemprop="articleBody">
-    <iframe src="{{ page.video-link }}" height="800px" width="100%" scrolling="no" frameborder="0"></iframe>
+    <iframe src="{{ page.video-link }}" width="100%" scrolling="no" frameborder="0"></iframe>
     {{ content }}
   </div>
 
