--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,7 @@ layout: default
   </header>
 
   <div class="post-content cell" itemprop="articleBody">
+    <!-- add a empty state as it takes time to load the iframe -->
     <iframe src="{{ page.video-link }}" width="100%" scrolling="no" frameborder="0"></iframe>
     {{ content }}
   </div>
