Empty/Loading state added

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,9 @@ layout: default
 
   <div class="post-content cell" itemprop="articleBody">
     <!-- add a empty state as it takes time to load the iframe -->
-    <iframe src="{{ page.video-link }}" width="100%" scrolling="no" frameborder="0"></iframe>
+    <div class="video-container">
+      <iframe src="{{ page.video-link }}" width="100%" scrolling="no" frameborder="0"></iframe>
+    </div>
     {{ content }}
   </div>
 
