--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -71,3 +71,8 @@ $lato-regular: 400;
 $lato-bold: 700;
 $lato-bold-italic: 700i;
 $lato-black: 900;
+
+// Animations
+$sprint: all 0.20s ease-in-out;
+$run: all 0.30s ease-in-out;
+$jog: all 0.50s ease-in-out;
