Explore Flow Types Styli Update

--- a/css/flowstate.scss
+++ b/css/flowstate.scss
@@ -148,6 +148,10 @@ body {
     }
   }
 
+  // .spacer{ //TODO do I want this or change the scale to 0.9 vs 1.05 for alignment with the recently added section
+  //   padding: 0 0.6rem;
+  // }
+
   .flow-tile{
     box-shadow: 0 0 0 0rem $brand-pink;
     transition: all 0.4s;
@@ -158,7 +162,7 @@ body {
     background-size: 100%;
     &:hover {
       box-shadow: 0 0 0 0rem $brand-pink, 0 0 0 0.5rem rgba($brand-pink, 0.16);
-      transform: scale(1.05);
+      transform: scale(0.9);
     }
     .icon-container{
       background-color: #F0F1F2;
