--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,9 @@ layout: default
       <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
       <div class="grid-x cell tag-container">
         <div class="tag cell shrink flow-type align-middle grid-x">
-          {% assign flow-type = site.data.flow-type[page.flow-type] %}
+          {% assign flow-type-ref = site.data.flow-type[page.flow-type] %}
           <!-- TODO center this icon -->
-          <div class="cell shrink flow-type-icon">{{ flow-type.icon }}</div>
+          <div class="cell shrink flow-type-icon">{{ flow-type-ref.icon }}</div>
           <div class="cell shrink">{{ page.flow-type }}</div>
         </div>
         <div class="tag cell shrink">
