--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="post grid-x">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  <div class="post-content">
+  <div class="post-content grid-x cell">
     {{ content }}
   </div>
 
