--- a/css/flowstate.scss
+++ b/css/flowstate.scss
@@ -86,57 +86,19 @@ body {
 
 .explore-flow-type{
   margin-block-start: 7rem;
-  a{
-    color: semantic-color(text);
-    h2{
-      font-family: $lato;
-      font-weight: $lato-bold;
-      font-style: italic;
-      font-size: 1.5rem;
-      i{
-        font-size: 1.25rem;
-        margin-left: 0.5rem;
-      }
-    }
-  }
-
-  a.flow-tile-link-wrapper{
-    &:hover{
-      text-decoration: none;
-    }
-  }
-
-  .flow-tile{
-    box-shadow: 0 0 0 0rem $brand-pink;
-    transition: all 0.4s;
-    cursor: pointer;
-    padding: 0.5rem;
-    border-radius: 16px;
-    background-position: center;
-    background-size: 100%;
-    &:hover {
-      box-shadow: 0 0 0 0rem $brand-pink, 0 0 0 0.5rem rgba($brand-pink, 0.16);
-      transform: scale(0.9);
-    }
-    .icon-container{
-      background-color: #F0F1F2;
-      width: 100%;
-      aspect-ratio: 5/3;
-      border-radius: 10px;
-    }
-    .text-section{
-      margin-block-start: 0.5rem;
-      padding: 0 0.25rem;
-      .name{
-        font-weight: $lato-bold;
-        text-transform: capitalize;
-      }
-      .number-of{
-        font-weight: $lato-light;
-        font-style: italic;
-      }
-    }
-  }
+  // a{
+  //   color: semantic-color(text);
+  //   h2{
+  //     font-family: $lato;
+  //     font-weight: $lato-bold;
+  //     font-style: italic;
+  //     font-size: 1.5rem;
+  //     i{
+  //       font-size: 1.25rem;
+  //       margin-left: 0.5rem;
+  //     }
+  //   }
+  // }
 }
 
 
