--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="post grid-x">
 
-  <header class="post-header">
+  <header class="post-header grid-x cell">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
