Announcement Banner Added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
+{%- comment -%}
+{%- include announcement.html -%}
+{%- endcomment -%}
+
 <header>
 
   <div class="grid-container grid-x align-justify align-center">
