--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -142,3 +142,14 @@ section{
     }
   }
 }
+
+.announcement-banner{
+  background-color: #F0F1F2;
+  text-align: center;
+  padding: 0.75rem 0.5rem;
+  // font-weight: $lato-bold;
+  font-style: italic;
+  p{
+    margin-bottom: 0;
+  }
+}
