--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,13 @@ layout: default
 <article class="post grid-x cell" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header grid-x cell align-middle">
-    <div class="cell shrink icon-container">
-      {% assign app = site.data.apps[page.application] %}
-      <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{page.application}}">
+    <div class="cell small-12 medium-shrink icon-container-container">
+      <div class="icon-container">
+        {% assign app = site.data.apps[page.application] %}
+        <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{page.application}}">
+      </div>
     </div>
-    <div class="cell auto grid-x">
+    <div class="cell small-12 medium-auto grid-x word-section">
       <p class="post-meta cell">
         Published
         <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
