--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -34,8 +34,8 @@ $semantic-colors:(
   ),
   dark:(
     text: $pure-white,
-    text-accent: $brand-pink, //TODO made this a different color
-    footer-bg: $light-grey, //TODO made this a different color
+    text-accent: $brand-pink, //TODO made this a different color Gissue#7
+    footer-bg: $light-grey, //TODO made this a different color Gissue#7
   ),
 );
 
