--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -19,6 +19,11 @@ $twitter-blue-dark: #0E8FD5;
 
 $agenda-brand-color: #FFAA01;
 $apple-news-brand-color: #f84969;
+$apple-store-brand-color: #00BBE0;
+$target-brand-color: #CC0000;
+$bandh-brand-color: #C13731;
+$google-fonts-brand-color: #1a73e8;
+$millies-brand-color: #ef4b81;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
