--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,3 +17,13 @@
     </div>
   </div>
 </footer>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5H6DLV1LZT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5H6DLV1LZT');
+</script>
