--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -24,6 +24,8 @@ $target-brand-color: #CC0000;
 $bandh-brand-color: #C13731;
 $google-fonts-brand-color: #1a73e8;
 $millies-brand-color: #ef4b81;
+$loom-brand-color: #565add;
+$soundcloud-brand-color: #f50;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
