--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -84,6 +84,12 @@ section{
       &.millies-ice-cream{
         @include mini-card($millies-brand-color,$elevation);
       }
+      &.loom{
+        @include mini-card($loom-brand-color,$elevation);
+      }
+      &.soundcloud{
+        @include mini-card($soundcloud-brand-color,$elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
