--- a/_layouts/flow-type-overview.html
+++ b/_layouts/flow-type-overview.html
@@ -10,7 +10,7 @@ layout: default
       </div>
     </div>
     <div class="cell small-12 medium-auto grid-x word-container">
-      <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+      <h1 class="post-title" itemprop="name headline">{{ page.name }}</h1>
     </div>
   </header>
 
