--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -90,6 +90,9 @@ section{
       &.soundcloud{
         @include mini-card($soundcloud-brand-color,$elevation);
       }
+      &.hulu{
+        @include mini-card($hulu-brand-color,$elevation);
+      }
       // TODO add color override for each app
       img{
         border-radius: $tile-radius;
