--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -26,6 +26,7 @@ $google-fonts-brand-color: #1a73e8;
 $millies-brand-color: #ef4b81;
 $loom-brand-color: #565add;
 $soundcloud-brand-color: #f50;
+$hulu-brand-color: #1ce783;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
