--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -27,6 +27,7 @@ $millies-brand-color: #ef4b81;
 $loom-brand-color: #565add;
 $soundcloud-brand-color: #f50;
 $hulu-brand-color: #1ce783;
+$apple-music-brand-color: #fc3c44;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
