RSS Feed Moved to Footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
         </a>
       </div>
       <div class="small-12 medium-shrink cell grid-x copyright-section align-center">
+        <a class="rss-feed" href="{{ "/feed.xml" | prepend: site.baseurl }}"><i class="fa-solid fa-square-rss"></i>RSS</a>
         <p class="no-select copyright">copyright © {{ 'now' | date: "%Y" }}</p>
         <p class="created">created by {% include external-link.html link="https://rehanbutt.com" content="Rehan Butt" %}</p>
       </div>
