--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -28,6 +28,7 @@ $loom-brand-color: #565add;
 $soundcloud-brand-color: #f50;
 $hulu-brand-color: #1ce783;
 $apple-music-brand-color: #fc3c44;
+$design-gifts-brand-color: #14254f;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
