--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -29,6 +29,10 @@ $soundcloud-brand-color: #f50;
 $hulu-brand-color: #1ce783;
 $apple-music-brand-color: #fc3c44;
 $design-gifts-brand-color: #14254f;
+$superlist-brand-color: #e75c45;
+$railway-brand-color: #9D1CDD;
+$denada-brand-color: #E35205;
+$annajona-brand-color: #FC1940;
 
 $brand-pink: #D12E6A;
 $brand-pink-light: #FAEAF0;
